fixed UI misalignment

--- a/Launcher/Components/MidContent.razor.css
+++ b/Launcher/Components/MidContent.razor.css
@@ -1,5 +1,4 @@
 ﻿.mid-frame {
-    object-fit: fill;
     width: 100%;
     height: 100%;
 }
@@ -7,10 +6,12 @@
 .mid-content-wrapper {
     position: relative;
     width: 100%;
+    height: 100%;
 }
 
 .mid-content-holder {
     position: absolute;
-    inset: 0; z-index: -1;
+    inset: 23px; z-index: -1;
+    padding: 10px;
     background: red;    
 }
